- "makepkg" command: add options to produce an XML index entry and a
  file of translatable strings suitable for use with gettext
- Graphing ("gnuplot" command and GUI): generalize the option of 
  separation using a binary dummy to allow use of discrete variables
- "boxplot" command: add --factorized and --panel options; also
  enhance the boxplot options available via the GUI

2011-04-22 version 1.9.5
- Add new translation: Greek (Manolis Tzagarakis and Ioannis Venetis)
- When building against gtk3, put the plugins into LIBDIR/gretl-gtk3
- "foreign" command: enable the --send-data option for Octave, in
  which case the gretl dataset is pre-loaded as a matrix named
  "gretldata"
- "coint2" (Johansen test): print the log-likelihood, plus improve the
  printing of the Pi matrix when exogenous regressors are present
- "coint2": add a --silent option
- VARs: add $fevd accessor to get the forecast error variance
  decomposition as a matrix; also add GUI access to forecast variance
  decomposition plots
- VECMs: add $vecGamma accessor to get the Gamma matrices (coefficients
  on the differences of the system variables) in standard format, plus
  $evals accessor to get the eigenvalues used in computing the trace
  test
- "tobit" command: add options to specify left- and/or right-
  censoring; also add --robust option
- gnuplot (command and GUI): add option to plot fitted cubic
- GUI plot dialog: add option to draw arrows on a graph
- GUI forecast dialog, for cross-sectional data: give option of showing
  confidence interval for mean Y rather than actual Y
- Fix a small memory leak when opening an *.asc data file
- New function colname(): retrieve a column name from a matrix
- New function eigsolve(): solves generalized eigenvalue problem
- New function NRmax(): Newton-Raphson maximizer
- New model accessors with string values: $depvar for the name of the
  dependent variable, and $command for the command word used