@@ -9,6 +9,8 @@ version 1.9.6, in progress
   separation using a binary dummy to allow use of discrete variables
 - "boxplot" command: add --factorized and --panel options; also
   enhance the boxplot options available via the GUI
+- Fix bug: nested "foreach" loop using a named list, with the name of 
+  the list subject to dollar-substitution
 
 2011-04-22 version 1.9.5
 - Add new translation: Greek (Manolis Tzagarakis and Ioannis Venetis)
